Added additional K8 config

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=gateway
 server.port=8080
 
 spring.cloud.gateway.discovery.locator.url-expression='http://'+serviceId+':8080'
-
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+spring.cloud.gateway.x-forwarded.port-enabled=true
 
+server.error.include-stacktrace=ALWAYS
+
+logging.level.org.springframework.cloud.kubernetes=DEBUG
 logging.level.org.springframework.cloud.gateway=TRACE
 logging.level.org.springframework.web=TRACE
 
