--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,10 +10,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -21,5 +19,5 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B test
+      run: mvn -B test -f /dog-service/pom.xml
     - uses: actions/checkout@v2
