--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,4 +19,6 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B test -f spring-cloud-gateway-with-kubernetes/dog-service/pom.xml
+      run: mvn -B test 
+      with:
+        path: spring-cloud-gateway-with-kubernetes/dog-service
