--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,8 +17,7 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v1.3.0
       with:
-        java-version: 11
-    - name: Build with Maven
-      run: mvn -B test 
-      with:
         path: spring-cloud-gateway-with-kubernetes/dog-service
+        java-version: 11
+    - name: Test with Maven
+      run: mvn -B test
