--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v1.3.0
       with:
-        path: dog-service
         java-version: 11
     - name: Test with Maven
+      with:
+        path: spring-cloud-gateway-with-kubernetes/spring-cloud-gateway-with-kubernetes/dog-service
       run: mvn -B test
