--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,4 +19,4 @@ jobs:
       with:
         java-version: 11
     - name: Test with Maven
-      run: mvn -B test -f spring-cloud-gateway-with-kubernetes/spring-cloud-gateway-with-kubernetes/dog-service/pom.xml
+      run: mvn -B test -f dog-service/pom.xml
