--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,12 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: dir2 directory
-      run: ls -la
     - name: Set up JDK 11
       uses: actions/setup-java@v1.3.0
       with:
         java-version: 11
+    - name: dir2 directory
+      run: ls -la
     - name: Test with Maven
-      run: mvn -B test -f ./dog-service/pom.xml
+      run: mvn -B test -f dog-service/pom.xml
       
